<resources>
    <string name="def_dict_name">Dictionary %s</string>
    <string name="no_dict_to_move">No dictionaries to move sample into</string>
    <string name="app_header">Memo</string>
    <string name="notsheetservice">Can not get spreadsheets</string>
    <string name="zero_number">0</string>
    <string name="sign_in_failed">Sign in failed: %s</string>
    <string name="interrupt">Interrupt</string>
    <string name="seconds_remain">Wait %.1f sec</string>
    <string name="default_spreadsheet_name">📔 Spreadsheet</string>
    <string name="counter">%d / %d</string>
    <string name="set_the_language">Please set the language for the dictionary</string>
    <string name="load_texture_error">Video card on your phone support only %d textures to load but need 5</string>
    <string name="load_gl_error">Video card on your phone can not run a game</string>
    <string name="from">%d from %d</string>
    <string name="time">%dm</string>
    <string name="update">UPDATE</string>
    <string name="default_notebook_name">New Notebook</string>
    <string name="empty_counter">/ %d</string>
    <string name="empty">Empty</string>
    <string name="shelves_item_name">shelves</string>
    <string name="dictionaries_item_name">dictionaries</string>
    <string name="notes_item_name">notes</string>
    <string name="notebooks_item_name">notebooks</string>
    <string name="percentage">%d%%</string>
    <string name="calculate">calculate…</string>
    <string name="more_than">> %d</string>
    <string name="too_fast">Too fast</string>
    <string name="left_right_percentage">%d%% / %d%%</string>
    <string name="positive_percentage">%s + %.2f%%</string>
    <string name="negative_percentage">%s - %.2f%%</string>
    <string name="all_percentage">%.1f%%</string>
    <string name="general_dialog_button_delete">DELETE</string>
    <string name="general_dialog_button_merge">Merge</string>
    <string name="general_dialog_button_cancel">Cancel</string>
    <string name="general_dialog_button_cancel2">Cancel</string>
    <string name="add">Add</string>
    <string name="share_file_name">memo</string>
    <string name="share_file_name_dict">dictionary</string>
    <string name="share_file_name_sheet">spreadsheet</string>
    <string name="share_file_name_notebook">notebook</string>
    <string name="new_dictionary">New Dictionary</string>
    <string name="retry_button_label">Retry</string>
    <string name="only_from_start">Only from start</string>
    <string name="load_progress_message">Please do not change A2:A, B2:B, E2:E, F - ranges, if you want the progress to be loaded back.
The progress will be loaded only for - %s</string>
    <string name="rookie">🧑 Rookie</string>
    <string name="beginner">🧑 Beginner</string>
    <string name="seasoned">🧑 Seasoned</string>
    <string name="adept">🧑 Adept</string>
    <string name="master">🧑 Master</string>
    <string name="guru">🧑 Guru</string>
    <string name="no_crashes">No crashes</string>
    <string name="clear_crash">Clear crash message</string>
    <string name="debug_screen_header">Crash screen</string>
    <string name="merge_dict_header">Do you want to merge it into \'%s\'?</string>
    <string name="spreadsheet_id_format">%s %s</string>
    <string name="sample_train_empty">(never)</string>
    <string name="sample_date_format">%s (%dd ago)</string>
    <string name="sample_date_today_format">%s (today)</string>
    <string name="delete_sample_header">Do you want to delete this sample?</string>
    <string name="author_dialog_header">Do you want to open the author\'s page?</string>
    <string name="author_dialog_ok">Open</string>
    <string name="author_dialog_cancel">Cancel</string>
    <string name="delete_note_header">Do you want to delete \'%s\' note?</string>
    <string name="shelves_title">Shelves</string>
    <string name="shelf_example_name">Shelf example %s</string>
    <string name="dictionary_example_name">Dictionary example %s</string>
    <string name="account_button_description">Account</string>
    <string name="more_button_description">More</string>
    <string name="back_button_description">Back</string>
    <string name="search_description">Search</string>
    <string name="new_notebook_dialog_header">New notebook</string>
    <string name="notebook_dialog_input_name_hint">Notebook name</string>
    <string name="dialog_help_header">Help</string>
    <string name="new_note_dialog_header">New note</string>
    <string name="note_dialog_input_header_hint">Header</string>
    <string name="note_dialog_input_number_hint">Chapter number (empty - 0)</string>
    <string name="note_dialog_input_content_hint">Content</string>
    <string name="dialog_update_notebook_header">Update notebook</string>
    <string name="dialog_update_notebook_input_hint">Notebook name</string>
    <string name="dialog_update_note_header">Update note</string>
    <string name="samples_title">Samples</string>
    <string name="repetition_title">Repetition</string>
    <string name="correct_answered">"%d from %d"</string>
    <string name="score">🚀\u0020Today\'s Score: %d (+%d)</string>
    <string name="train_time">⌛\u0020Time: %s</string>
    <string name="sheets">sheets</string>
    <string name="sheets_fragment_title">Sheets</string>
    <string name="login_to_see_sheets">Please sign in with Google and refresh</string>
    <string name="spreadsheets">spreadsheets</string>
    <string name="spreadsheets_title">Spreadsheets</string>
    <string name="sound_content_description_left">Sound left</string>
    <string name="sound_content_description_right">Sound right</string>
    <string name="translated_by">Translated by</string>
    <string name="arrow_content_description">Arrow</string>
    <string name="delete_spreadsheet_button">DELETE</string>
    <string name="dialog_delete_spreadsheet_header">Do you want to delete \'%s\' record?</string>
    <string name="dialog_delete_spreadsheet_note">This action will delete table id from the app</string>
    <string name="sheet_dialog_input_name_hint">Sheet name</string>
    <string name="sheet_dialog_new_header">New sheet</string>
    <string name="swap_content_description">Swap</string>
    <string name="reset_progress">Reset progress</string>
    <string name="sort_by_title">Sort by…</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="sort_by_kind">Sort by kind</string>
    <string name="sort_by_left">Sort by left</string>
    <string name="sort_by_right">Sort by right</string>
    <string name="dictionary_dialog_input_name_hint">Dictionary name</string>
    <string name="dictionary_dialog_load_from_spreadsheet">Load from Google spreadsheet:</string>
    <string name="dictionary_dialog_choose_languages">Choose languages:</string>
    <string name="choose_left_language">Left values</string>
    <string name="choose_right_language">Right values</string>
    <string name="new_dictionary_dialog_retry">Retry</string>
    <string name="new_dictionary_dialog_please_login">Please sign in with Google</string>
    <string name="unfold_languages_content_description">Unfold languages</string>
    <string name="speakable_text_unfold_sheets">Unfold sheets</string>
    <string name="speakable_left_language">Choose left language</string>
    <string name="speakable_right_language">Choose right language</string>
    <string name="bind_spreadsheet">Bind spreadsheet</string>
    <string name="load_progress">Load progress</string>
    <string name="dictionary_dialog_update_switch_label">Update from sheet</string>
    <string name="dictionary_dialog_delete_samples_checkbox">Delete local samples</string>
    <string name="dictionary_update_examples_checkbox">Update examples from sheet</string>
    <string name="sheet_dialog_update_header">Rename the sheet</string>
    <string name="delete_notebook_button">DELETE</string>
    <string name="dialog_delete_notebook_header">Do you want to delete \'%s\' notebook?</string>
    <string name="dialog_delete_note_header">Do you want to delete \'%s\' note?</string>
    <string name="dialog_delete_notebook_warning">This action will delete all notes inside</string>
    <string name="dialog_delete_notebook_confirm">Confirm</string>
    <string name="notebook_dialog_update_switch_label">Update from sheet</string>
    <string name="notebook_dialog_delete_samples_checkbox">Delete local notes</string>
    <string name="delete_shelf_button">DELETE</string>
    <string name="dialog_delete_shelf_header">Do you want to delete \'%s\' shelf?</string>
    <string name="dialog_delete_shelf_warning">This action will delete all dictionaries and samples inside</string>
    <string name="dialog_delete_shelf_confirm">Confirm</string>
    <string name="delete_dict_button">DELETE</string>
    <string name="dialog_delete_dict_header">Do you want to delete \'%s\' dictionary?</string>
    <string name="dialog_delete_dict_warning">This action will delete all samples inside</string>
    <string name="dialog_delete_dict_confirm">Confirm</string>
    <string name="clear_samples_warning">Wipe values in a chosen column, select new language, send a dictionary to a sheet to perform auto translation.</string>
    <string name="clear_left_values">Wipe left values</string>
    <string name="clear_right_values">Wipe right values</string>
    <string name="clear_button">Wipe</string>
    <string name="clear_examples">Wipe examples</string>
    <string name="clear_kinds">Wipe kinds</string>
    <string name="delete_tab_button">DELETE</string>
    <string name="dialog_delete_tab_header">Do you want to delete \'%s\' sheet?</string>
    <string name="dialog_delete_tab_warning">This action will delete the sheet from server side</string>
    <string name="dialog_delete_tab_confirm">Confirm</string>
    <string name="spreadsheet_dialog_new_header">New spreadsheet</string>
    <string name="spreadsheet_dialog_get_name">Get a name from the server</string>
    <string name="spreadsheet_dialog_update_header">Update spreadsheet</string>
    <string name="spreadsheet_dialog_input_name_hint">Spreadsheet name (arbitrarily)</string>
    <string name="spreadsheet_dialog_input_id_hint">Spreadsheet id (existed)</string>
    <string name="spreadsheet_dialog_icon_content_description">Spreadsheet icon</string>
    <string name="speakable_type">Choose type</string>
    <string name="spreadsheet_type0">Any</string>
    <string name="spreadsheet_type1">Dictionaries</string>
    <string name="spreadsheet_type2">Notebooks</string>
    <string name="dict_icon_checker_content_description">Dictionary icon checker</string>
    <string name="copy_spreadsheet_content_description">Copy spreadsheet id</string>
    <string name="send_dictionary_header">Dictionary</string>
    <string name="send_dictionary_radio_bind">Bind Google spreadsheet</string>
    <string name="send_dictionary_radio_merge">Merge</string>
    <string name="send_dictionary_radio_move">Move</string>
    <string name="send_dictionary_radio_copy">Copy</string>
    <string name="send_dictionary_radio_copy_to_sheet">Send to Google spreadsheet</string>
    <string name="send_dictionary_radio_share">Share</string>
    <string name="save_progress">Save progress</string>
    <string name="send_dictionary_radio_share_spreadsheet">Share Google spreadsheet</string>
    <string name="choose_sheet_label">Choose a sheet:</string>
    <string name="replace_data_warning">Existed data will be replaced in A:N range</string>
    <string name="content_description_cancel_send_sheet">Cancel sent sheet</string>
    <string name="action_search">Search…</string>
    <string name="action_sort_by_date">🔤\u0020\u0020\u0020\u0020Sort by date</string>
    <string name="action_spreadsheets">🗃️\u0020\u0020\u0020\u0020Google Spreadsheets</string>
    <string name="action_find_word">🔎\u0020\u0020\u0020\u0020Find…</string>
    <string name="action_sign_in">Account</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_ok">OK</string>
</resources>