<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/newShelfDialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_default"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/warningMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:background="@drawable/bg_note_default"
        android:ellipsize="end"
        android:maxLines="6"
        android:paddingHorizontal="5dp"
        android:text="@string/clear_samples_warning"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RadioButton
            android:id="@+id/clearLeft"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/clear_left_values" />

        <RadioButton
            android:id="@+id/clearRight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/clear_right_values" />

    </RadioGroup>

    <CheckBox
        android:id="@+id/clearExamples"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:minHeight="48dp"
        android:text="@string/clear_examples" />

    <CheckBox
        android:id="@+id/clearKinds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:minHeight="48dp"
        android:text="@string/clear_kinds" />

    <CheckBox
        android:id="@+id/clearConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:minHeight="48dp"
        android:maxLines="1"
        android:ellipsize="end"
        android:text="@string/dialog_delete_dict_confirm" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:maxLines="1"
            android:ellipsize="end"
            android:background="@drawable/btn_dialog_standard_cancel"
            android:text="@string/dialog_cancel"
            android:textColor="#FFF" />

        <Button
            android:id="@+id/clear"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:maxLines="1"
            android:ellipsize="end"
            android:alpha="0.8"
            android:background="@drawable/btn_dialog_delete"
            android:text="@string/clear_button"
            android:textColor="#FFF"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>
</LinearLayout>