<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_default"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:srcCompat="@drawable/ic_spreadsheet"
        android:contentDescription="@string/spreadsheet_dialog_icon_content_description"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/newSpreadsheetDialogHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spreadsheet_dialog_new_header"
        android:textAlignment="center"
        android:maxLines="2"
        android:ellipsize="end"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/nameFromServer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:minHeight="48dp"
        android:paddingHorizontal="2dp"
        android:text="@string/spreadsheet_dialog_get_name"
        android:maxLines="1"
        android:ellipsize="end"
        android:textColor="#393939" />

    <EditText
        android:id="@+id/spreadsheetNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/spreadsheet_dialog_input_name_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLength="50"
        android:maxLines="1"
        android:minHeight="48dp"
        android:textColorHint="#546E7A" />

    <EditText
        android:id="@+id/spreadsheetIdInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:ems="10"
        android:hint="@string/spreadsheet_dialog_input_id_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLength="100"
        android:maxLines="1"
        android:minHeight="48dp"
        android:textColorHint="#546E7A" />

    <Spinner
        android:id="@+id/type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/speakable_type"
        android:minHeight="48dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/newSpreadsheetCancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:maxLines="1"
            android:ellipsize="end"
            android:background="@drawable/btn_dialog_standard_cancel"
            android:text="@string/dialog_cancel"
            android:textColor="#FFF" />

        <Button
            android:id="@+id/newSpreadsheetOk"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:maxLines="1"
            android:ellipsize="end"
            android:background="@drawable/btn_dialog_standard_ok"
            android:text="@string/dialog_ok"
            android:textColor="#FFF" />
    </LinearLayout>
</LinearLayout>