<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sendDictionaryDialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_default"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/dialogSendDictionaryHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:text="@string/send_dictionary_header"
        android:maxLines="2"
        android:ellipsize="end"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <LinearLayout
        android:id="@+id/sheetChooserContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/chooseSheetLabel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/choose_sheet_label"
                android:textColor="#515151" />

            <ImageView
                android:id="@+id/closeSheetChooser"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_weight="0"
                android:adjustViewBounds="true"
                android:contentDescription="@string/content_description_cancel_send_sheet"
                app:srcCompat="@drawable/btn_cancel_item"
                app:tint="#E30707" />
        </LinearLayout>

        <TextView
            android:id="@+id/replaceDataWarning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_warning_default"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/replace_data_warning"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/saveProgress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/save_progress"
            android:textColor="#515151"
            tools:ignore="TextContrastCheck" />

        <LinearLayout
            android:id="@+id/chosenItemsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>

        <SearchView
            android:id="@+id/sheetTabSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/errorLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="0"
            android:orientation="vertical"
            tools:ignore="NestedWeights">

            <TextView
                android:id="@+id/errorMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:maxLines="3"
                android:ellipsize="end"
                android:background="@drawable/bg_error_default"
                android:padding="5dp"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/retryButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:maxLines="1"
                android:ellipsize="end"
                android:background="@drawable/bg_item_dictionary"
                android:text="@string/new_dictionary_dialog_retry"
                android:textColor="#454565"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/sheetTabChooser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/chooserGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0">

        <RadioButton
            android:id="@+id/bind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_radio_dict"
            android:ellipsize="end"
            android:maxLines="1"
            android:minHeight="48dp"
            android:text="@string/send_dictionary_radio_bind" />

        <RadioButton
            android:id="@+id/merge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_radio_dict"
            android:minHeight="48dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/send_dictionary_radio_merge" />

        <RadioButton
            android:id="@+id/move"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_radio_shelf"
            android:minHeight="48dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/send_dictionary_radio_move" />

        <RadioButton
            android:id="@+id/copy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_radio_shelf"
            android:minHeight="48dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/send_dictionary_radio_copy" />

        <RadioButton
            android:id="@+id/copyToSheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_radio_spreadsheet"
            android:minHeight="48dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/send_dictionary_radio_copy_to_sheet"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_radio_share"
            android:minHeight="48dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/send_dictionary_radio_share" />

        <RadioButton
            android:id="@+id/shareSpreadsheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_radio_share"
            android:minHeight="48dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/send_dictionary_radio_share_spreadsheet" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sendDictionaryCancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:maxLines="1"
            android:ellipsize="end"
            android:background="@drawable/btn_dialog_standard_cancel"
            android:text="@string/dialog_cancel"
            android:textColor="@color/colorWhite"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/sendDictionaryOk"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:maxLines="1"
            android:ellipsize="end"
            android:background="@drawable/btn_dialog_standard_ok"
            android:text="@string/dialog_ok"
            android:textColor="#FFF" />
    </LinearLayout>

</LinearLayout>