<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:id="@+id/newShelfDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/addSortByHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/sort_by_title"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/sortByDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/sort_by_date"
                android:textColor="#675D5D"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/sortByKind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/sort_by_kind"
                android:textColor="#675D5D"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/sortByLeft"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/sort_by_left"
                android:textColor="#675D5D"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/sortByRight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/sort_by_right"
                android:textColor="#675D5D"
                android:textStyle="bold" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/sortByOk"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:background="@drawable/btn_dialog_standard_cancel"
                android:text="@string/dialog_ok"
                android:textColor="#FFF" />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>